[tool.poetry]
name = "nonebot_plugin_ddcheck"
version = "0.3.0"
description = "Nonebot2 成分姬插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-ddcheck"
repository = "https://github.com/noneplugin/nonebot-plugin-ddcheck"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.0", extras = ["fastapi"] }
nonebot-plugin-send-anything-anywhere = "^0.2.7"
nonebot-plugin-htmlrender = "^0.2.0"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-localstore = "^0.5.0"
httpx = ">=0.19.0,<1.0.0"
Jinja2 = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
